--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <br>
     <html>
         <body>
-            <h1>My First Game link ... https://scratch.mit.edu/projects/178004384/</h1>
+            <a href="https://scratch.mit.edu/projects/178004384/">My First Game</a>
         </body>
     </html>
     <a target="_blank" href="https://scratch.mit.edu">
