--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <body>
             <a href="https://scratch.mit.edu/projects/178004384/">My First Game</a>
             <a href="https://scratch.mit.edu/projects/179290025/">The Time I Almost Broke My Arm</a>
-            <a href="/my_website/download_game/Learning_Shapes.aia">Learning Shapes Game</a>
+            <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
         </body>
     </html>
     <a target="_blank" href="https://scratch.mit.edu">
