--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
             <a href="https://scratch.mit.edu/projects/178004384/">My First Game</a>
             <a href="https://scratch.mit.edu/projects/179290025/">The Time I Almost Broke My Arm</a>
             <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
+		<a target="_blank" href="https://repl.it/@Zach_Marks/interactive-Fiction">
+                <img src= "images/logo-small.png" height="50"
         </body>
     </html>
     <a target="_blank" href="https://scratch.mit.edu">
