--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,11 @@
             <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
 		<a target="_blank" href="https://repl.it/@Zach_Marks/interactive-Fiction">
                 <img src= "images/logo-small.png" height="50"
-        </body>
-    </html>
- </html>
-        </body>
-             <a href="/my_website/Mad_libs.py">
+		<a target="_blank" href="/my_website/Mad_libs.py">
                 <img src= "/my_website/images/mad_libs.png" height="100">
         </body>
     </html>
+
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
     </a>
