--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
 		<a target="_blank" href="https://repl.it/@Zach_Marks/interactive-Fiction">
                 <img src= "images/logo-small.png" height="50"
-		<a href="Mad_libs.py">
-                <img src= "images/mad_libs.png" height="100">
+		     <a href="Mad_libs.py">Mad Libs Game</a>
+                
         </body>
     </html>
 
