--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,9 @@
             <a href="https://scratch.mit.edu/projects/179290025/">The Time I Almost Broke My Arm</a>
             <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
 		<a target="_blank" href="https://repl.it/@Zach_Marks/interactive-Fiction">
-                <img src= "images/logo-small.png" height="50"       
+                <img src= "images/logo-small.png" height="50">
+		<a href="/my_website/images/Mad_libs.py" download>Mad Libs Game</a>
+          	<img src="/my_website/images/mad_libs.png" height "100">
         </body>
     </html>
 
