--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <a href="images/Learning_Shapes.aia">Learning Shapes Game</a>
 		<a target="_blank" href="https://repl.it/@Zach_Marks/interactive-Fiction">
                 <img src= "images/logo-small.png" height="50">
-		<a href="/my_website/images/Mad_libs.py" download>Mad Libs Game</a>
-          	<img src="/my_website/images/mad_libs.png" height "100">
+		<a href="images/Mad_libs.py" download>
+                <img src="images/mad_libs.png" height="100">
         </body>
     </html>
 
